--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
   </style>
 </head>
 <body>
-<p class="p1"><span class="s1"><b><i>&lt;</i>img src=”(logo BRIGHTER web.jpeg)”<i>&gt;</i></b></span></p>
+<p class="p1"><span class="s1"><b><i>&lt;</i>img src=”logo BRIGHTER web.jpeg”<i>&gt;</i></b></span></p>
 </body>
 </html>
